--- a/fe/package.json
+++ b/fe/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "offline-plugin": "^4.8.4",
     "postcss-loader": "^2.0.6",
     "precss": "^1.4.0",
     "rimraf": "^2.6.1",
