--- a/fe/package.json
+++ b/fe/package.json
@@ -12,13 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-polyfill": "^6.23.0",
     "element-ui": "next",
     "flex.css": "^1.1.7",
     "font-awesome.css": "^4.7.2",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0"
@@ -27,13 +27,8 @@
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
-    "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-component": "^0.10.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-vue-app": "^1.3.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
