[^] 数据服务：更改服务器启动命令参数，修复内存泄漏的问题。

--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,8 +1,13 @@
 {
-  	"presets": ["stage-3"],
-  	"plugins": [
-  		"transform-async-to-generator",
-        "transform-es2015-modules-commonjs",
-        "transform-export-extensions"
+    "presets": [
+      ["env", {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
-}
+  }
