--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
   "author": "ciel",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "axios": "^0.16.2",
     "element-ui": "next",
     "flex.css": "^1.1.7",
