--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "font-awesome.css": "^4.7.2",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
+    "popmotion": "^8.1.22",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-router": "^2.6.0",
