--- a/fe/package.json
+++ b/fe/package.json
@@ -20,7 +20,9 @@
     "normalize.css": "^7.0.0",
     "popmotion": "^8.1.22",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-cookie": "^1.1.4",
+    "vue-echarts": "^3.1.3",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0"
