--- a/fe/package.json
+++ b/fe/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.2",
-    "element-ui": "^2.0.11",
+    "element-ui": "^2.4.11",
     "flex.css": "^1.1.7",
     "font-awesome.css": "^4.7.2",
     "lodash": "^4.17.4",
@@ -52,7 +52,7 @@
     "vue-template-compiler": "^2.3.4",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
