--- a/fe/package.json
+++ b/fe/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^3.5.2",
-    "axios": "^0.16.2",
+    "axios": ">=0.19.0",
     "element-ui": "^2.4.11",
     "flex.css": "^1.1.7",
     "font-awesome.css": "^4.7.2",
