--- a/application/package.json
+++ b/application/package.json
@@ -8,7 +8,8 @@
     "egg-mongoose": "^2.1.1",
     "egg-redis": "^1.0.2",
     "egg-scripts": "^2.1.0",
-    "egg-validate": "^1.0.0"
+    "egg-validate": "^1.0.0",
+    "koa-rewrite": "^3.0.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
