--- a/fe/package.json
+++ b/fe/package.json
@@ -50,9 +50,10 @@
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.0.0",
+    "webpack": "^2.6.1",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": ">=3.1.11",
+    "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
